enable edr on macos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
 vulkano-util = { path = "../vulkano/vulkano-util" }
 easy-gltf = "1.1.1"
 cgmath = "0.18.0"
+objc2 = "0.5"
 
 # [dependencies.gltf]
 # version = "1.4"
